--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3'
 services:
   nginx:
-    build: ./nginxbuild
+    image: vsharique/nginx:1.10.3
     ports:
       - "8181:80"
       - "8282:443"
-    links:
-      - "php"
   php:
-    build: ./phpbuild
+    image: vsharique/php:5.6-fpm
     ports:
       - "9000:9000"
